--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,6 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "scripts": {
-    "dev": "npx tailwindcss -i ./styles/app.css -o ../static/css/app.css --watch"
+    "dev": "npx tailwindcss -i ./styles.css -o ./static/css/app.css --watch"
   }
 }
